hydroflow/tests/snapshots/surface_lattice_bimorphism__join@graphvis_dot.snap
---
source: hydroflow/tests/surface_lattice_bimorphism.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([(7, 1), (7, 2)])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(|(k, v)| MapUnionSingletonMap::new_from((k, SetUnionSingletonSet::new_from(v))))", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) state::<'static, MapUnionHashMap<usize, SetUnionHashSet<usize>>>()", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) source_iter([(7, 0), (7, 1), (7, 2)])", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) map(|(k, v)| MapUnionSingletonMap::new_from((k, SetUnionSingletonSet::new_from(v))))", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) state::<'static, MapUnionHashMap<usize, SetUnionHashSet<usize>>>()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) lattice_bimorphism(\l    KeyedBimorphism::<\l        HashMap<_, _>,\l        _,\l    >::new(CartesianProductBimorphism::<HashSet<_>>::default()),\l    lhs,\l    rhs,\l)\l", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) lattice_reduce()", shape=invhouse, fillcolor="#88aaff"]
    n9v1 [label="(n9v1) for_each(|x| out_send.send(x).unwrap())", shape=house, fillcolor="#ffff88"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n12v1 [label="(n12v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n3v1
    n1v1 -> n2v1
    n5v1 -> n6v1
    n4v1 -> n5v1
    n3v1 -> n10v1
    n6v1 -> n11v1
    n8v1 -> n9v1
    n7v1 -> n12v1
    n10v1 -> n7v1 [label="0"]
    n11v1 -> n7v1 [label="1"]
    n12v1 -> n8v1 [color=red]
    n3v1 -> n7v1 [color=red]
    n6v1 -> n7v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
        n3v1
        subgraph "cluster_sg_1v1_var_lhs" {
            label="var lhs"
            n1v1
            n2v1
            n3v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n4v1
        n5v1
        n6v1
        subgraph "cluster_sg_2v1_var_rhs" {
            label="var rhs"
            n4v1
            n5v1
            n6v1
        }
    }
    subgraph "cluster n3v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n7v1
        subgraph "cluster_sg_3v1_var_my_join" {
            label="var my_join"
            n7v1
        }
    }
    subgraph "cluster n4v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1\nstratum 1"
        n8v1
        n9v1
        subgraph "cluster_sg_4v1_var_my_join" {
            label="var my_join"
            n8v1
            n9v1
        }
    }
}

